assets/styles/components/header.styl
.header {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  height: 100px;
  z-index: 10;
}

.header__wrapper {
  margin: 0 auto;
  display: flex;
}

.header__nav {
  text-align: right;
  flex: 1 1 100%;
  padding: 0 side_padding;
}

.header__link {
  display: inline-block;
  text-transform: uppercase;
  text-decoration: none;
  margin: 0 15px;
  line-height: 100px;
  color: white;
}

